<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/appColor"
    android:fillViewport="true">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center">

            <TextView
                android:text="@string/videoname"
                android:layout_width="0dp"
                android:layout_weight="0.75"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:paddingRight="20dp"/>

            <TextView
                android:id="@+id/text_videoname"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:paddingRight="20dp"/>
        </TableRow>

        <TableRow
            android:id="@+id/hashtags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center">

            <TextView
                android:text="@string/vid_hashtags"
                android:layout_width="0dp"
                android:layout_weight="0.75"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:paddingRight="20dp"/>

            <TextView
                android:id="@+id/text_vid_hashtags"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:paddingRight="20dp"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center">

            <TextView
                android:text="@string/date_created"
                android:layout_width="0dp"
                android:layout_weight="0.75"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:paddingRight="20dp"/>

            <TextView
                android:id="@+id/text_date_created"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:paddingRight="20dp"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center">

            <TextView
                android:text="@string/vid_length"
                android:layout_width="0dp"
                android:layout_weight="0.75"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:paddingRight="20dp"/>

            <TextView
                android:id="@+id/text_vid_length"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:paddingRight="20dp"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center">

            <TextView
                android:text="@string/vid_frame_rate"
                android:layout_width="0dp"
                android:layout_weight="0.75"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:paddingRight="20dp"/>

            <TextView
                android:id="@+id/text_vid_frame_rate"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:paddingRight="20dp"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center">

            <TextView
                android:text="@string/vid_frame_height"
                android:layout_width="0dp"
                android:layout_weight="0.75"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:paddingRight="20dp"/>

            <TextView
                android:id="@+id/text_vid_frame_height"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:paddingRight="20dp"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center">

            <TextView
                android:text="@string/vid_frame_width"
                android:layout_width="0dp"
                android:layout_weight="0.75"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:paddingRight="20dp"/>

            <TextView
                android:id="@+id/text_vid_frame_width"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:paddingRight="20dp"/>
        </TableRow>



    </TableLayout>
</ScrollView>